--- a/ZAMS modelling.ipynb
+++ b/ZAMS modelling.ipynb
@@ -107,14 +107,10 @@
     "\n",
     "    # Reaction rates\n",
     "    # Proton-proton chain reactions\n",
-    "    R_pp1 = 1.07e-7 * density * X**2 * (temperature/1e6)**(-2/3) * math.exp(-33.8*(temperature/1e6)**(-1/3))\n",
-    "    R_pp2 = 4.01e-9 * density * X * Y * (temperature/1e6)**(1/2) * math.exp(-152.28*(temperature/1e6)**(-1))\n",
-    "    R_pp3 = 6.4e-10 * density * X * Z * (temperature/1e6)**(2/3) * math.exp(-12.276*(temperature/1e6)**(-1/3))\n",
+    "    R_pp = 2.4e4 * density * X**2 * (temperature/1e9)**(-2/3) * math.exp(-3.38*(temperature/1e9)**(-1/3))\n",
     "\n",
     "    # CNO cycle reactions\n",
-    "    R_CNO1 = 1.39e8 * density * X * Y * (temperature/1e6)**(2/3) * math.exp(-156.98*(temperature/1e6)**(-1/3))\n",
-    "    R_CNO2 = 6.05e9 * density * X * Z * (temperature/1e6)**(1/2) * math.exp(-473.72*(temperature/1e6)**(-1))\n",
-    "    R_CNO3 = 4.90e5 * density * X * Y * (temperature/1e6)**(-3/2) * math.exp(-15.228*(temperature/1e6)**(-1))\n",
+    "    R_CNO = 4.4e25 * density * X * Z * (temperature/1e9)**(-2/3) * math.exp(-15.228*(temperature/1e9)**(-1/3))\n",
     "\n",
     "    epsilon_pp = f11 * (R_pp1 + R_pp2 + R_pp3)\n",
     "    epsilon_cno = R_CNO1 + R_CNO2 + R_CNO3\n",
